题库交互修改优化 视频画面比例调节 多图预览问题修复 文件添加null判断 修改部分图片在高分辨率机型下失真问题 App用户默认头像同意处理 修复部分无头像预览崩溃问题 修复首页热点轮播null问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -332,6 +332,7 @@
     <string name="answer_request_error">提问失败,请重新尝试</string>
     <string name="answer_hinttext">请输入内容</string>
     <string name="answer_hinttext2">内容不得少于5个字</string>
+    <string name="answer_hint_notExists">图片不存在</string>
     <string name="answer_hinttext3">请选择投诉类型</string>
     <string name="answer_addtag">添加标签</string>
     <string name="answer_videotime">视频节点:</string>
