题库交互修改优化 视频画面比例调节 多图预览问题修复 文件添加null判断 修改部分图片在高分辨率机型下失真问题 App用户默认头像同意处理 修复部分无头像预览崩溃问题 修复首页热点轮播null问题 WebView适配黑夜模式 修复后续教育签到显示问题 添加重播功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,6 +169,7 @@
     <!--<string name="course_buyCourse">您还未购买课程，请购买后进行观看</string>-->
     <string name="course_notAsk">该课程无法提问</string>
     <string name="course_completed">播放完毕</string>
+    <string name="course_completed_replay">播放完毕,点击重播</string>
     <string name="course_videoLoading">视频加载中</string>
     <string name="course_courseDuration">课程时长:\u3000</string>
     <string name="course_freeWatchCompleted">试看结束,请购买相关课程\u3000</string>
