题库交互修改优化 视频画面比例调节 多图预览问题修复 文件添加null判断 修改部分图片在高分辨率机型下失真问题 App用户默认头像同意处理 修复部分无头像预览崩溃问题 修复首页热点轮播null问题 WebView适配黑夜模式 修复后续教育签到显示问题 添加重播功能 添加0.75倍速 修复了部分情况写可能出现的课程状态失效BUG 后续教育修改新需求

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="screen">筛选</string>
     <string name="not_apply">您还未报名,报名后进行学习！</string>
     <string name="signin_tips">您还在吗？点击屏幕继续学习。</string>
+    <string name="signin">签到</string>
     <string name="signin_tips_success">签到成功</string>
     <string name="signin_tips_error">签到失败</string>
     <string name="study_know">学习须知</string>
@@ -138,7 +139,7 @@
     <string name="course_directory">课程目录</string>
     <string name="course_ask">课程答疑</string>
     <string name="course_download">下载列表</string>
-    <string name="course_getInfoError">视频信息获取失败</string>
+    <string name="course_getInfoError">无法获取视频资源</string>
     <!--<string name="course_collectionSuccess">Get √</string>
     <string name="course_collectionCancel">ヾ(￣▽￣)Bye~Bye~</string>-->
     <string name="course_collectionSuccess">已收藏</string>
