题库交互修改优化 视频画面比例调节 多图预览问题修复 文件添加null判断 修改部分图片在高分辨率机型下失真问题 App用户默认头像同意处理 修复部分无头像预览崩溃问题 修复首页热点轮播null问题 WebView适配黑夜模式 修复后续教育签到显示问题 添加重播功能 添加0.75倍速 修复了部分情况写可能出现的课程状态失效BUG 后续教育修改新需求 更换了logo 更换了启动图 推送优化

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,8 @@
     <string name="signin_tips_success">签到成功</string>
     <string name="signin_tips_error">签到失败</string>
     <string name="study_know">学习须知</string>
-    <string name="study_know_detail">如何获得本课程学分: 每个视频学习过程中均会随机弹出签到提示，全部视频都成功签到后才能获得本课程CPE积分。</string>
+    <!--<string name="study_know_detail">如何获得本课程学分: 每个视频学习过程中均会随机弹出签到提示，全部视频都成功签到后才能获得本课程CPE积分。</string>-->
+    <string name="study_know_detail">如何获得本课程学分：每个视频结束后点击“签到”成功后，即可获取对应视频的积分。</string>
     <string name="cpe_edit_name">您的姓名</string>
     <string name="cpe_edit_idnumber">您的身份证号码</string>
     <string name="cpe_edit_vip">您的IMA会员号</string>
